--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/curved_progress_bar"
     android:textAlignment="center"
     tools:context=".SignUpActivity">
 
@@ -18,6 +19,17 @@
             android:layout_weight="4"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_login" />
+
+        <Button
+            android:id="@+id/LoginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/innerblckround_btn"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="sign up"
+            android:textColor="#FFFFFF" />
 
         <TextView
             android:id="@+id/text_button"
@@ -59,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:layout_margin="20dp"
-            android:background="@drawable/round_corner"
+            android:background="@drawable/curved_progress_bar"
             android:hint="Email"
             android:paddingStart="10dp"
             android:paddingLeft="10dp"
@@ -72,7 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:layout_margin="20dp"
-            android:background="@drawable/round_corner"
+            android:background="@drawable/curved_progress_bar"
             android:hint="Password"
             android:inputType="textPassword"
             android:paddingStart="10dp"
@@ -81,15 +93,6 @@
             android:textColorHint="#eee"
             android:textSize="17sp" />
 
-        <Button
-            android:id="@+id/LoginButton"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:background="@drawable/rounded_corner_button"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="sign up"
-            android:textColor="#777" />
     </LinearLayout>
 
 
@@ -105,7 +108,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Or Signup with" />
+            android:fontFamily="@font/baloo_paaji"
+            android:text="Or Signup with"
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
