--- a/app/src/main/res/drawable/progress_bar_background.xml
+++ b/app/src/main/res/drawable/progress_bar_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-
-    <stroke android:color="@color/black" android:width="2dp" />
+    <corners android:radius="18dp" />
+    <stroke android:color="@color/transparent" android:width="6dp" />
 </shape>
