--- a/app/src/main/res/layout/activity_exercise_player3.xml
+++ b/app/src/main/res/layout/activity_exercise_player3.xml
@@ -1,55 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".ExercisePlayer.ExercisePlayerActivity3">
-
-    <ImageView
-        android:id="@+id/imageViewExerciseGif"
-        android:layout_width="343dp"
-        android:layout_height="412dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="162dp"
-        android:layout_marginEnd="19dp" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar5"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="357dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="650dp"
-        android:indeterminate="false"
-        android:progress="0" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="144dp"
-        android:layout_marginBottom="91dp"
-        android:text="Button" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="281dp"
         android:layout_height="58dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="81dp"
-        android:text="act3" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="27dp"
+        android:background="@drawable/innerblckround_btn"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Yoga Excrcise 3"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/imageViewExerciseGif"
+        android:layout_width="346dp"
+        android:layout_height="282dp"
+        android:layout_marginTop="40dp"
+        android:adjustViewBounds="true" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
+    <TextView
+        android:id="@+id/ExDialog"
+        android:layout_width="match_parent"
+        android:layout_height="148dp"
+        android:text="TextView"
+        android:textColor="#FFFFFF" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="95dp"
+        android:layout_height="71dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        app:srcCompat="@drawable/akwhitelogo" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar4"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="361dp"
+        android:layout_height="33dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/progress_bar_background"
+        android:indeterminate="false"
+        android:progress="0"
+        android:progressDrawable="@drawable/curved_progress_bar" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:text="Back"
+        android:textColor="#FFFFFF" />
+
+</LinearLayout>
