--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pagebkg"
+    android:background="@color/backgroundColor"
     android:orientation="vertical"
     android:textAlignment="center"
     tools:context=".GetStarted">
@@ -17,29 +17,33 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="88dp"
+        android:layout_marginStart="73dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="101dp"
-        android:background="@drawable/white_background"
-        android:text="Get Premission" />
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/curved_progress_bar"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Get Premission"
+        android:textColor="#FFF4F4"
+        android:textSize="20sp" />
 
     <com.nitish.typewriterview.TypeWriterView
         android:id="@+id/typeWriterView"
-        android:layout_width="354dp"
-        android:layout_height="327dp"
+        android:layout_width="358dp"
+        android:layout_height="361dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="27dp"
 
-        android:layout_marginBottom="214dp"
-        android:background="@drawable/white_background"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="279dp"
+        android:background="@drawable/speechbubble"
         android:shadowColor="#000000"
         android:shadowDx="1.5"
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
         android:textAlignment="center"
         android:textAllCaps="true"
+        android:textColor="#FFFFFF"
         android:textColorHint="#601D1D"
         android:textSize="32sp"
         app:fontFamily="@font/baloo_paaji" />
@@ -51,20 +55,31 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="88dp"
+        android:layout_marginStart="71dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="101dp"
-        android:background="@drawable/white_background"
+        android:layout_marginBottom="33dp"
+        android:background="@drawable/curved_progress_bar"
         android:text="Continue"
+        android:textColor="#FFFFFF"
         android:visibility="gone" />
 
     <ImageView
         android:id="@+id/imageViewMorning"
-        android:layout_width="176dp"
-        android:layout_height="121dp"
+        android:layout_width="99dp"
+        android:layout_height="70dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-1dp"
+        android:layout_marginTop="13dp"
+        android:src="@drawable/akwhitelogo" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="194dp"
+        android:layout_height="209dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-61dp"
+        android:layout_marginBottom="122dp"
         android:src="@drawable/akwhitelogo" />
 
 
