--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -4,21 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent"
+    android:background="@color/backgroundColor"
+    android:backgroundTint="@color/backgroundColor"
     tools:context=".MainMenu.MainMenuActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="791dp"
-        android:layout_above="@+id/bottom_navigation" />
+        android:layout_height="851dp"
+        android:layout_above="@+id/bottom_navigation" >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/ProfileRecycle"
+            android:layout_width="219dp"
+            android:layout_height="75dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/curved_progress_bar" />
+    </FrameLayout>
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/transparent"
+        app:backgroundTint="@color/backgroundColor"
         app:fabCradleMargin="10dp"
         app:fabCradleRoundedCornerRadius="10dp"
         app:fabCradleVerticalOffset="10dp">
@@ -28,10 +40,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="16dp"
-            app:menu="@menu/bottom_nav_menu"
-
-
-            />
+            android:background="@drawable/curved_progress_bar"
+            app:itemIconTint="@null"
+            app:menu="@menu/bottom_nav_menu" />
     </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -39,9 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_person_24"
-        app:layout_anchor="@id/bottomAppBar"
-
-        />
-
+        app:backgroundTint="@color/teal_200"
+        app:layout_anchor="@id/bottomAppBar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
