--- a/app/src/main/res/layout/activity_meditation_player3.xml
+++ b/app/src/main/res/layout/activity_meditation_player3.xml
@@ -10,14 +10,16 @@
     <ProgressBar
         android:id="@+id/progress_barAudio"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="373dp"
-        android:layout_height="wrap_content"
+        android:layout_width="376dp"
+        android:layout_height="38dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="177dp"
-        android:max="20000" />
+        android:layout_marginBottom="155dp"
+        android:background="@drawable/buttonbckblack"
+        android:max="20000"
+        android:progressDrawable="@drawable/curved_progress_bar" />
 
     <Button
         android:id="@+id/button4"
@@ -28,7 +30,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="125dp"
         android:layout_marginBottom="69dp"
-        android:text="Back" />
+        android:background="@drawable/innerblckround_btn"
+        android:text="Back"
+        android:textColor="#FFFFFF" />
 
     <ImageView
         android:id="@+id/imageViewNight"
