--- a/app/src/main/res/layout/activity_mood_survey.xml
+++ b/app/src/main/res/layout/activity_mood_survey.xml
@@ -2,21 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/textcolor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pagebkg"
+    android:background="@color/backgroundColor"
     tools:context=".MoodSurveyActivity">
 
     <RelativeLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="541dp"
+        android:layout_height="662dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:layout_marginTop="74dp"
-        android:layout_marginEnd="0dp"
-        android:background="@drawable/white_background">
+        android:layout_marginEnd="0dp">
+
 
         <TextView
             android:id="@+id/text_view"
@@ -25,26 +26,26 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_marginStart="132dp"
-            android:layout_marginTop="442dp"
+            android:layout_marginStart="127dp"
+            android:layout_marginTop="503dp"
             android:fontFamily="@font/baloo_paaji"
             android:text="0%"
             android:textAlignment="center"
-            android:textColor="#040202"
+            android:textColor="#F4F4F4"
             android:textSize="34sp" />
-
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="351dp"
-            android:layout_height="44dp"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="123dp" />
+            android:layout_marginEnd="22dp"
+            android:layout_marginBottom="185dp"
+            android:background="@drawable/buttonbckblack"
+            android:progressDrawable="@drawable/curved_progress_bar" />
 
         <com.linx.stress_free_app.AnimationController.Typewriter
             android:id="@+id/typewriterLoadingDialog"
@@ -52,10 +53,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="31dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="52dp"
             android:textAlignment="center"
-            android:textColor="#1B1A1A"
+            android:textColor="#FBFBFB"
             android:textSize="34sp"
             app:fontFamily="@font/baloo_paaji" />
 
@@ -71,9 +72,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="229dp"
         android:layout_marginRight="229dp"
-        android:layout_marginBottom="41dp"
-        android:backgroundTint="@color/black"
-        android:text="Back" />
+        android:layout_marginBottom="45dp"
+        android:background="@drawable/innerblckround_btn"
+        android:backgroundTint="@color/InnerColor"
+        android:text="Back"
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/Nextbtn"
@@ -85,9 +88,10 @@
         android:layout_marginStart="247dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="46dp"
-        android:backgroundTint="@color/purple_200"
+        android:background="@drawable/innerblckround_btn"
+        android:backgroundTint="@color/InnerColor"
         android:text="Next"
-        android:visibility="gone" />
+        android:textColor="#F3EDED" />
 
     <TextView
         android:id="@+id/current_user_text_view"
@@ -99,6 +103,7 @@
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/baloo_paaji"
         android:text="TextView"
+        android:textColor="#FFFCFC"
         android:textSize="20sp" />
 
     <Button
@@ -111,7 +116,8 @@
         android:layout_marginTop="17dp"
         android:background="@drawable/circle_completed"
         android:text="Skip Survey"
-        android:visibility="invisible" />
+        android:textColor="#FFFFFF"
+        android:visibility="gone" />
 
 
 </RelativeLayout>
