--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/backgroundColor"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -17,13 +18,16 @@
             android:id="@+id/profile_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@drawable/buttonbckblack"
             android:src="@drawable/default_profile_picture" />
 
         <TextView
             android:id="@+id/medal_rank"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Medal Rank" />
+            android:fontFamily="@font/baloo_paaji"
+            android:text="Medal Rank"
+            android:textColor="#E6E2E2" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,15 +38,24 @@
                 android:id="@+id/email_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email:" />
+                android:fontFamily="@font/baloo_paaji"
+                android:text="Email:"
+                android:textColor="#FFFFFF" />
 
             <EditText
                 android:id="@+id/email_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:layout_width="322dp"
+                android:layout_height="47dp"
+                android:background="@drawable/buttonbckblack"
+                android:inputType="textEmailAddress"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF" />
 
         </LinearLayout>
+
+        <Space
+            android:layout_width="366dp"
+            android:layout_height="19dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,13 +66,17 @@
                 android:id="@+id/password_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Password:" />
+                android:fontFamily="@font/baloo_paaji"
+                android:text="Password:"
+                android:textColor="#E6E5E5" />
 
             <EditText
                 android:id="@+id/password_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:layout_width="292dp"
+                android:layout_height="48dp"
+                android:background="@drawable/buttonbckblack"
+                android:inputType="textPassword"
+                android:textColor="#FAF6F6" />
 
         </LinearLayout>
 
@@ -67,18 +84,29 @@
             android:id="@+id/save_changes_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save Changes" />
+            android:fontFamily="@font/baloo_paaji"
+            android:text="Save Changes"
+            android:textColor="#E4E4E4" />
 
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="368dp"
+            android:layout_width="371dp"
             android:layout_height="42dp"
-            android:text="TextView" />
+            android:fontFamily="@font/baloo_paaji"
+            android:text="Leaderboard"
+            android:textColor="#FFFFFF"
+            android:textSize="34sp" />
+
+        <Space
+            android:layout_width="362dp"
+            android:layout_height="13dp" />
 
         <FrameLayout
             android:id="@+id/leaderboard_fragment_container"
-            android:layout_width="357dp"
-            android:layout_height="524dp"
+            android:layout_width="353dp"
+            android:layout_height="376dp"
+            android:layout_marginBottom="11dp"
+            android:background="@drawable/buttonbckblack"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
