--- a/app/src/main/res/layout/activity_tutorial_player.xml
+++ b/app/src/main/res/layout/activity_tutorial_player.xml
@@ -4,25 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".MeditationPlayer.TutorialPlayerActivity">
 
 
     <WebView
         android:id="@+id/webview_youtube_player"
         android:layout_width="match_parent"
-        android:layout_height="339dp" />
+        android:layout_height="343dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="116dp" />
 
     <ProgressBar
         android:id="@+id/progress_barAudio"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="357dp"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="36dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="402dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="514dp"
+        android:background="@drawable/buttonbckblack"
         android:indeterminate="false"
-        android:progress="0" />
+        android:progress="0"
+        android:progressDrawable="@drawable/curved_progress_bar" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="159dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="119dp"
+        android:layout_marginBottom="184dp"
+        android:background="@drawable/innerblckround_btn"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Button"
+        android:textColor="#FBFBFB" />
 
 </RelativeLayout>
