--- a/app/src/main/res/layout/activity_tutorial_player2.xml
+++ b/app/src/main/res/layout/activity_tutorial_player2.xml
@@ -4,25 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".ExercisePlayer.TutorialPlayerActivity2">
 
 
     <WebView
         android:id="@+id/webview_youtube_player"
         android:layout_width="match_parent"
-        android:layout_height="339dp" />
+        android:layout_height="339dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="107dp" />
 
     <ProgressBar
         android:id="@+id/progress_barAudio"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="357dp"
-        android:layout_height="wrap_content"
+        android:layout_width="351dp"
+        android:layout_height="36dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="402dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="573dp"
+        android:background="@drawable/buttonbckblack"
         android:indeterminate="false"
-        android:progress="0" />
+        android:progress="0"
+        android:progressDrawable="@drawable/curved_progress_bar" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="113dp"
+        android:layout_height="62dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="133dp"
+        android:layout_marginBottom="129dp"
+        android:background="@drawable/innerblckround_btn"
+        android:text="Button"
+        android:textColor="#F6F0F0" />
 
 </RelativeLayout>
