--- a/app/src/main/res/layout/fragment_bed_time.xml
+++ b/app/src/main/res/layout/fragment_bed_time.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/white_background"
+    android:background="@color/backgroundColor"
     tools:context=".BedTimeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,9 +15,11 @@
         android:layout_height="351dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/baloo_paaji"
         android:text="Please enter how long you sleep for"
         android:textAlignment="center"
+        android:textColor="#F4EFEF"
         android:textSize="48sp" />
 
     <Button
@@ -27,9 +29,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="124dp"
-        android:layout_marginBottom="181dp"
-        android:text="Button" />
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="178dp"
+        android:background="@drawable/innerblckround_btn"
+        android:text="Button"
+        android:textColor="#E8E8E8" />
 
     <EditText
         android:id="@+id/editHoursText"
@@ -37,9 +41,12 @@
         android:layout_height="79dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="258dp"
+        android:layout_marginBottom="262dp"
+        android:background="@drawable/round_btn"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Enter Hours you sleep" />
+        android:text="Enter Hours you sleep"
+        android:textAlignment="center"
+        android:textColor="#000000" />
 
 </RelativeLayout>
