--- a/app/src/main/res/layout/fragment_display_app_usage.xml
+++ b/app/src/main/res/layout/fragment_display_app_usage.xml
@@ -3,46 +3,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/white_background"
+    android:background="@color/backgroundColor"
     tools:context=".DisplayAppUsageFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="354dp"
-        android:layout_height="218dp"
+        android:layout_width="334dp"
+        android:layout_height="225dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="151dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="155dp"
         android:background="@drawable/progress_bar_background"
         android:clipToPadding="false"
         android:scrollbars="vertical" />
 
     <Button
         android:id="@+id/nextAppDataBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="106dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
+        android:layout_marginBottom="159dp"
         android:text="Submit"
-        android:visibility="gone" />
+        android:textColor="#FDFDFD" />
 
     <ProgressBar
         android:id="@+id/progressBar3"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="351dp"
-        android:layout_height="44dp"
-        android:layout_alignParentEnd="true"
+        android:layout_width="345dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
 
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="34dp" />
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="224dp"
+        android:background="@drawable/buttonbckblack"
+        android:progressDrawable="@drawable/curved_progress_bar" />
 
     <TextView
         android:id="@+id/precentageView2"
@@ -52,24 +56,25 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="675dp"
+        android:layout_marginStart="127dp"
+        android:layout_marginTop="546dp"
         android:fontFamily="@font/baloo_paaji"
         android:text="0%"
         android:textAlignment="center"
-        android:textColor="#040202"
+        android:textColor="#FFFCFC"
         android:textSize="34sp" />
 
     <TextView
         android:id="@+id/typewriter_text3"
-        android:layout_width="373dp"
-        android:layout_height="144dp"
+        android:layout_width="374dp"
+        android:layout_height="121dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="22dp"
         android:fontFamily="@font/baloo_paaji"
         android:text="Checking App Data Usage"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="20sp" />
 
 </RelativeLayout>
