--- a/app/src/main/res/layout/fragment_get_screen_time.xml
+++ b/app/src/main/res/layout/fragment_get_screen_time.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/white_background"
+    android:background="@color/backgroundColor"
     tools:context=".GetScreenTimeFragment">
 
     <ProgressBar
         android:id="@+id/progressBar2"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="351dp"
-        android:layout_height="44dp"
+        android:layout_width="313dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="261dp" />
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="330dp"
+        android:background="@drawable/buttonbckblack"
+        android:progressDrawable="@drawable/curved_progress_bar" />
 
     <TextView
         android:id="@+id/precentageView"
@@ -28,23 +29,24 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="469dp"
+        android:layout_marginStart="137dp"
+        android:layout_marginTop="295dp"
         android:fontFamily="@font/baloo_paaji"
         android:text="0%"
         android:textAlignment="center"
-        android:textColor="#040202"
+        android:textColor="#000000"
         android:textSize="34sp" />
 
     <TextView
         android:id="@+id/typewriter_text"
-        android:layout_width="354dp"
-        android:layout_height="351dp"
+        android:layout_width="376dp"
+        android:layout_height="279dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
         android:fontFamily="@font/baloo_paaji"
         android:text="Checking Screen Usage"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="48sp" />
 
     <TextView
@@ -54,18 +56,23 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="89dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginStart="79dp"
+        android:layout_marginBottom="250dp"
         android:fontFamily="@font/baloo_paaji"
         android:text="TextView"
+        android:textColor="#FFFFFF"
         android:textSize="20sp" />
 
     <Button
         android:id="@+id/NextScreenDataBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="168dp"
+        android:layout_height="61dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="56dp"
-        android:text="Next" />
+        android:layout_marginBottom="189dp"
+        android:background="@drawable/innerblckround_btn"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Next"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp" />
 </RelativeLayout>
