--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,18 +7,19 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/NewsRecyler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="350dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="480dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="484dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="17dp"
+        android:background="@drawable/curved_progress_bar"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
@@ -26,13 +27,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecoRecyclerView"
-        android:layout_width="380dp"
-        android:layout_height="208dp"
+        android:layout_width="366dp"
+        android:layout_height="81dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="106dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="227dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
@@ -47,29 +48,43 @@
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="448dp"
-        android:text="Due to your stress level we  have to choose these things  beacuse" />
+        android:background="@drawable/curved_progress_bar"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Due to your stress level we  have to choose these things  beacuse"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:layout_width="372dp"
+        android:layout_height="43dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom"
         android:layout_marginStart="7dp"
-        android:layout_marginBottom="393dp"
-        android:text="Explore More!" />
+        android:layout_marginBottom="379dp"
+        android:background="@drawable/curved_progress_bar"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Explore More!"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="364dp"
-        android:layout_height="74dp"
+        android:layout_width="366dp"
+        android:layout_height="88dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center|top"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="23dp"
-        android:text="We Recomend These stuff to do" />
+        android:layout_marginTop="132dp"
+        android:background="@drawable/curved_progress_bar"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="We Recomend These stuff to do"
+        android:textColor="#FBFBFB"
+        android:textSize="16sp" />
+
 </RelativeLayout>
