--- a/app/src/main/res/layout/fragment_pain.xml
+++ b/app/src/main/res/layout/fragment_pain.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/white_background"
+    android:background="@color/backgroundColor"
     android:orientation="vertical"
     tools:context=".PainFragment">
 
     <com.nitish.typewriterview.TypeWriterView
         android:id="@+id/typeWriterView2"
         android:layout_width="match_parent"
-        android:layout_height="447dp"
+        android:layout_height="427dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
 
+        android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="284dp"
+        android:layout_marginStart="-2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="326dp"
         android:baselineAligned="false"
         android:shadowColor="#000000"
         android:shadowDx="1.5"
@@ -30,22 +32,24 @@
         app:fontFamily="@font/baloo_paaji" />
 
     <ImageView
+        android:id="@+id/imagePain"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="2dp"
-        android:layout_marginBottom="188dp"
-        android:background="@drawable/painicon" />
+        android:layout_marginBottom="222dp"
+        android:background="@drawable/pain" />
 
     <ImageView
+        android:id="@+id/imageNonPain"
         android:layout_width="68dp"
         android:layout_height="74dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="193dp"
-        android:background="@drawable/happyperson" />
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="222dp"
+        android:background="@drawable/happy" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/PainSlider"
@@ -53,7 +57,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="201dp"
+        android:layout_marginBottom="232dp"
         android:background="@drawable/round_btn"
         android:stepSize="1"
         android:valueFrom="0"
@@ -65,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="109dp"
+        android:layout_marginBottom="136dp"
         android:background="@drawable/white_background"
         android:text="0"
         android:textAlignment="center"
@@ -77,7 +81,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42dp"
-        android:text="Submit" />
+        android:layout_marginBottom="72dp"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Submit"
+        android:textColor="#FFFFFF" />
 
 </RelativeLayout>
