--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/curved_progress_bar"
     android:orientation="horizontal"
     android:padding="16dp">
 
@@ -13,11 +14,13 @@
 
     <TextView
         android:id="@+id/recommend_item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="91dp"
+        android:layout_height="31dp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
+        android:fontFamily="@font/baloo_paaji"
         android:text="Item name"
+        android:textColor="#FDFDFD"
         android:textSize="16sp" />
 
 </LinearLayout>
