--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -3,26 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/curved_progress_bar">
+
+    <TextView
+        android:id="@+id/rank_text"
+        android:layout_width="85dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Rank"
+        android:textColor="#EADBDB"
+        android:textSize="48sp" />
 
     <ImageView
         android:id="@+id/profile_image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="84dp"
+        android:layout_height="61dp"
         android:src="@drawable/ic_baseline_person_24" />
 
     <TextView
         android:id="@+id/email_text"
-        android:layout_width="wrap_content"
+        android:layout_width="146dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginStart="16dp"
-        android:text="Email" />
-
-    <TextView
-        android:id="@+id/rank_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Rank" />
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Email"
+        android:textColor="#EDE8E8"
+        android:textSize="16sp" />
 
 </LinearLayout>
