--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item android:id="@+id/homeMenu"
         android:title="Home"
-        android:icon="@drawable/construction"/>
+        android:icon="@drawable/home"/>
     <item android:id="@+id/excerciseMenu"
         android:title="Excercise"
         android:icon="@drawable/excercise"/>
