--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources><style name="WhiteButton" parent="Widget.AppCompat.Button">
     <item name="android:background">@android:color/white</item>
+    <item name="colorOnSurface">@color/white</item>
+
 </style></resources>
