--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/speechbubble"
+            android:background="@drawable/innerblckround_btn"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="Login up"
