--- a/app/src/main/res/layout/fragment_get_screen_time.xml
+++ b/app/src/main/res/layout/fragment_get_screen_time.xml
@@ -42,9 +42,10 @@
         android:layout_width="376dp"
         android:layout_height="279dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="72dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="74dp"
         android:fontFamily="@font/baloo_paaji"
-        android:text="Checking Screen Usage will allow see home much you use your phone"
+        android:text="Checking Screen Usage will allow me see much you use your phone"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="30sp" />
