--- a/app/src/main/res/layout/activity_user_diary_entry.xml
+++ b/app/src/main/res/layout/activity_user_diary_entry.xml
@@ -8,10 +8,10 @@
 
     <TextView
         android:id="@+id/tv_diary_entry"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="369dp"
+        android:layout_height="824dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
